new map function

--- a/src/index.html
+++ b/src/index.html
@@ -576,7 +576,7 @@
       </div>
 
       <!-- MAP PANEL -->
-      <div class="mainPanel">
+      <div class="mainPanel" id="map-panel">
         <div id="map"></div>
         <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
       </div>
